Table Agent as A {
  id int [pk, increment]
  username varchar [unique]
  password varchar
  
  name varchar
  mobile_number int  // Assume Singapore number
  email_address varchar
  
  is_cso bool  // TODO: Appropriate, or need separate CSO table?
}


// CUSTOMER STUFF
Table Customer as C {
  id int [pk, increment]
  username varchar [unique]
  password varchar
  name varchar
  
  // PII
  // TODO: Need your help Kenneth
  nric char(9) [unique]
  monthly_salary int [note: "in USD dollars"]
  monthly_expenses int  // required?
  
  // Contact information
  mobile_number int  // Assume Singapore number
  email_address varchar
  
  // Company data
  payment_method_id int [ref: > customer.Payment_methods.id]
  agent_id int [not null, ref: <> Agent.id]
}

// Separate table since multiple customers can share same
// refund channels
Table customer.Payment_methods {
  id int [pk, increment]
  
  // Payment information
  // See: https://www.worldremit.com/en/singapore/faq/bank-transfer
  full_name varchar  // specific to this method
  mobile_number int  // assume Singapore numbers
  bank_name varchar
  branch_name varchar
  account_number int
  bank_code int [note: "3 digits long"]
}

// TODO: Is this how this works?
//       - Every customer has a list of agents they can
//         talk to, who may be tagged as a CSO or not
//       - Each agent/CSO can deal with multiple clients
Table Customer_assignments {
  agent_id int [ref: > Agent.id]
  customer_id int [ref: > Customer.id]
  Indexes {
    (agent_id, customer_id) [pk]
  }
}

Table insurance.Claims {
  id int [increment]
  plan_id int [ref: > insurance.Plans.id]
  customer_id int [not null, ref: > Customer.id]
  
  // Claim details submitted by customer (to add by agent)
  claim_justification varchar(max)
  claim_value float
  claim_submitted_date datetime [not null, default: `today()`]
  
  // TODO: Follow up by dunno who
  claim_approved bool
  claim_processed_date datetime
  comments varchar(max)
  
  // TODO: need to create account for Finance
  claim_disimbursed bool
  claim_disimbursed_date datetime
  bank_transaction_id varchar
  
  Indexes {
    (id, customer_id) [pk]
  }
}

Table insurance.Purchases {
  id int [pk, increment]
  plan_id int [ref: > insurance.Plans.id]
  agent_id int [ref: > Agent.id]
  customer_id int [ref: > Customer.id]

  // Confirmation by agent
  purchase_date datetime
  purchase_value float
  policy_start_date datetime
  policy_end_date datetime  // determines if policy in effect
  
  // Specific details
  // TODO: Expand this? Or assume single beneficary (i.e. Customer alone)
  
}

Table insurance.Premiums {
  id int [pk, increment]
  plan_id int [ref: > insurance.Plans.id]
  customer_id int [ref: > Customer.id]
  
  payment_date datetime
  payment_value float [note: "in USD"]
}

Table insurance.Plans {
  id int [pk, increment]
  value int
  policy_description varchar(max)
}